<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/course_add_category_card_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    android:layout_marginLeft="@dimen/main_card_margin_horizontal"
    android:layout_marginRight="@dimen/main_card_margin_horizontal"
    android:layout_marginTop="@dimen/main_card_margin_vertical"
    android:background="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/categoryNameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginStart="8dp"
            android:hint="@string/category_name_placeholder"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/categoryWeightEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginStart="44dp"
            android:hint="@string/category_weight_placeholder"
            android:inputType="numberDecimal"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/categoryNameEt"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:met_validateOnFocusLost="false"
            android:layout_marginLeft="44dp" />

        <Button
            android:id="@+id/addCategoryDoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/white"
            android:text="@string/done_btn_placeholder"
            android:textColor="@color/primary"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/categoryWeightEt"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="16dp" />

        <!--<ImageButton-->
            <!--android:id="@+id/imageButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_editor_absoluteX="294dp"-->
            <!--app:layout_editor_absoluteY="19dp"-->
            <!--card_view:srcCompat="@drawable/ic_done_black_64dp_1x" />-->

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>